npm install stylelint stylelint-config-recommended stylelint-config-prettier stylelint-prettier --save-dev

--- a/package.json
+++ b/package.json
@@ -49,6 +49,10 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^1.7.0",
     "node-sass": "^6.0.1",
-    "prettier": "^2.3.0"
+    "prettier": "^2.3.0",
+    "stylelint": "^13.13.1",
+    "stylelint-config-prettier": "^8.0.2",
+    "stylelint-config-recommended": "^5.0.0",
+    "stylelint-prettier": "^1.2.0"
   }
 }
