--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^1.7.0",
+    "husky": "^6.0.0",
+    "lint-staged": "^11.0.0",
     "node-sass": "^6.0.1",
     "prettier": "^2.3.0",
     "stylelint": "^13.13.1",
