--- a/package.json
+++ b/package.json
@@ -28,6 +28,17 @@
     "format": "prettier --write .",
     "prepare": "husky install"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "./node_modules/.bin/lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": "eslint --max-warnings=0 . --fix",
+    "**/*.{css,scss}": [
+      "stylelint --max-warnings=0 src/**/*.{css,scss} --fix"
+    ]
+  },
   "browserslist": {
     "production": [
       ">0.2%",
