--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "npm run lint:js && npm run lint:css && npm run format",
-    "lint:js": "eslint --fix .",
-    "lint:css": "stylelint src/**/*.{css,scss}",
+    "lint:js": "eslint --max-warnings=0 --ignore-path '.eslintignore' src/*.{ts,tsx}",
+    "lint:css": "stylelint --max-warnings=0 src/**/*.{css,scss}",
     "format": "prettier --write .",
     "prepare": "husky install"
   },
@@ -35,12 +35,12 @@
     }
   },
   "lint-staged": {
-    "*.{ts,tsx}": [
-      "eslint --max-warnings=0 . --fix",
+    "src/*.{ts,tsx}": [
+      "npm run lint:js",
       "prettier --write ."
     ],
-    "**/*.{css,scss}": [
-      "stylelint --max-warnings=0 src/**/*.{css,scss} --fix",
+    "src/*.{css,scss}": [
+      "npm run lint:css",
       "prettier --write ."
     ]
   },
