--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "say-hello",
   "version": "0.1.0",
   "private": true,
+  "homepage": "./",
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
@@ -16,7 +17,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.3.2",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "microsoft-cognitiveservices-speech-sdk": "^1.18.1"
   },
   "scripts": {
     "start": "react-scripts start",
