--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "say-hello",
   "version": "0.1.0",
   "private": true,
-  "homepage": "./",
+  "homepage": "https://bonybody.github.io/say-hello/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
